--- a/templates/tag_details.html
+++ b/templates/tag_details.html
@@ -1,12 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>{{ object.name }}</h2>
-<p>{{ object.description }}</p>
-<b>Blogs in this Tag:</b>
-
-<ul>
-{% for blog in blogs_in_tag %}
-    <li> <a href='{% url 'blog_details' pk=blog.pk %}'>{{ blog.title }}</a> </li>
-{% endfor %}
-</ul>
+    <h2>{{ object.name }}</h2>
+    <hr/>
+    <p>{{ object.description|safe|escape }}</p>
 {% endblock %}
