--- a/templates/create.html
+++ b/templates/create.html
@@ -16,7 +16,7 @@
         </div>
         </div>
         </br>
-        <input type="submit" class="btn-info" value="Create"/>
+        <input type="submit" class="btn btn-success" value="Submit"/>
     </form>
         </div>
     </div>
