--- a/templates/tag_list.html
+++ b/templates/tag_list.html
@@ -3,7 +3,8 @@
 
     <div class="container">
         <h2>Tags</h2>
-    <div class="container-fluid">
+        <hr/>
+    <div class="container-fluid jum">
         {% load render_table from django_tables2 %}
         {% render_table table %}
     </div>
