--- a/templates/base.html
+++ b/templates/base.html
@@ -16,27 +16,70 @@
 
 <body>
 
+{#<div id="navbar" class="navbar-collapse navbar navbar-invers collapse">#}
+{#    <ul class="nav navbar-nav">#}
+{#        <li class="active"><a href='{% url 'blog_list' %}'>Blogs</a></li>#}
+{#        <li><a href="{% url 'tag_list' %}">Tags</a></li>#}
+{#        <li><a href="{% url 'json-feed' %}">Feed</a></li>#}
+{#        <li class="dropdown">#}
+{#            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>#}
+{#            <ul class="dropdown-menu" role="menu">#}
+{#                <li><a href="#">Action</a></li>#}
+{#                <li><a href="#">Another action</a></li>#}
+{#                <li><a href="#">Something else here</a></li>#}
+{#                <li class="divider"></li>#}
+{#                <li class="dropdown-header">Nav header</li>#}
+{#                <li><a href="#">Separated link</a></li>#}
+{#                <li><a href="#">One more separated link</a></li>#}
+{#            </ul>#}
+{#        </li>#}
+{#    </ul>#}
+{#    <ul class="nav navbar-nav navbar-right">#}
+{#        {% if user.is_authenticated %}#}
+{#            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="caret"></span></a>#}
+{#            <ul class="dropdown-menu" role="menu">#}
+{##}
+{#                <li><a href="{% url 'blog_create' %}">Create Post</a></li>#}
+{#                <li><a href="{% url 'tag_create' %}">Create Tag</a></li>#}
+{#                <li><a href="{% url 'logout_user' %}">Log Out</a></li></ul>#}
+{#        {% else %}#}
+{#            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Login/Register <span class="caret"></span></a>#}
+{#            <ul class="dropdown-menu" role="menu">#}
+{#                <li><a href="{% url 'login_user' %}">Login</a></li>#}
+{#                <li><a href="{% url 'register_user' %}">Register</a></li>#}
+{#            </ul>#}
+{#        {% endif %}#}
+{#    </ul>#}
+{#</div>#}
+
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'blog_list' %}">Blogs</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'blog_list' %}">My Blog</a>
+                </div>
             <ul class="nav navbar-nav">
-                {% if user.is_authenticated %}
-                    <li><a href="#"> Welcome {{ user.username }} </a></li>
-                    <li><a href="{% url 'blog_create' %}">Create New Post</a></li>
-                    <li><a href="{% url 'tag_create' %}">Create New Tag</a></li>
-                    <li class=""><a href='{% url 'blog_list' %}'>All Blogs</a></li>
-                    <li><a href="{% url 'tag_list' %}">All Tags</a></li>
-                    <li><a href="{% url 'logout_user' %}">Log Out</a></li>
-                {% else %}
-                    <li class=""><a href='{% url 'blog_list' %}'>All Blogs</a></li>
-                    <li><a href="{% url 'tag_list' %}">All Tags</a></li>
-                    <li><a href="{% url 'login_user' %}">Login</a></li>
-                    <li><a href="{% url 'register_user' %}">Register</a></li>
-                {% endif %}
+                <li class="active"><a href='{% url 'blog_list' %}'>Blogs</a></li>
+                <li><a href="{% url 'tag_list' %}">Tags</a></li>
+                <li class="dropdown">
+                    {% if user.is_authenticated %}
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+
+                        <li><a href="{% url 'blog_create' %}">Create Post</a></li>
+                        <li><a href="{% url 'tag_create' %}">Create Tag</a></li>
+                        <li><a href="{% url 'logout_user' %}">Log Out</a></li></ul>
+                        {% else %}
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Login/Register <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                        <li><a href="{% url 'login_user' %}">Login</a></li>
+                        <li><a href="{% url 'register_user' %}">Register</a></li>
+                            </ul>
+                        {% endif %}
+
                 <li><a href="{% url 'json-feed' %}">Feed</a></li>
+                </li>
             </ul>
         </div>
         <!--/.nav-collapse -->
