--- a/templates/blog_details.html
+++ b/templates/blog_details.html
@@ -3,7 +3,14 @@
     <div class="well">
     <div class="row">
         <div class="col-md-8"><h3>{{ object.title }}</h3></div>
-        <div class="col-md-4"><button type="button" class="btn btn-success"><a href="{% url 'blog_edit' slug=object.slug %}">Edit</a></button></div>
+        <div class="col-md-4">
+            {% if user.is_authenticated %}
+                {% ifequal user object.author %}
+                <button type="button" class="btn btn-default"><a href="{% url 'blog_edit' slug=object.slug %}">Edit</a></button>
+                <button type="button" class="btn btn-default"><a href="{% url 'blog_delete' slug=object.slug %}">Delete</a></button>
+                {% endifequal %}
+            {% endif %}
+        </div>
     </div>
 
         {% if object.author.first_name and   object.author.first_name %}
