--- a/templates/myblog/myblog_confirm_delete.html
+++ b/templates/myblog/myblog_confirm_delete.html
@@ -2,15 +2,17 @@
 
 {% block content %}
 
-    <div class="confirmation-box">
-        <p>{{ message }}</p>
-        <div>
-            <a href="{{ prev_link }}">Cancel</a>
+    <div class=".text-center">
+        <h3 class=".text-center">Are you sure?</h3>
+        <div class=".text-center" >
+
             <form action="{{ action_link }}" method="post">
+                {% csrf_token %}
                 <input type="hidden" name="next" value="{{ prev_link }}" />
-                <input type="submit" value="Send" />
+                <input type="submit" value="Continue" class="btn btn-success" />
             </form>
         </div>
     </div>
+
 
 {% endblock %}
