--- a/templates/tag_details.html
+++ b/templates/tag_details.html
@@ -1,6 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>{{ object.name }}</h2>
+    <div class="well">
+    <div class="row">
+        <div class="col-md-8"><h3>{{ object.name }}</h3></div>
+        <div class="col-md-4">
+            {% if user.is_authenticated and user.is_staff %}
+                    <button type="button" class="btn btn-default"><a href="{% url 'tag_edit' slug=object.slug %}">Edit</a></button>
+{#                    <button type="button" class="btn btn-default"><a href="{% url 'tag _delete' slug=object.slug %}">Delete</a></button>#}
+            {% endif %}
+        </div>
+    </div>
+    </div>
     <hr/>
+    <div class="well">
     <p>{{ object.description|safe|escape }}</p>
+    </div>
 {% endblock %}
